@@ -1,6 +1,13 @@
 \name{NEWS}
 \title{NEWS file for the gCMAP}
 
+\section{Changes in version 1.1.4}{
+  \itemize{
+    \item{BUGFIX}{ The gealm_score method is not defined for queries with missing values and will now return the corresponding error message.}
+    \itme{BUGFIX}{ GeneSetCollections containing only one set are processed correctly by gsealm_score.}
+  }
+}	
+
 \section{Changes in version 1.1.3}{
   \itemize{
     \item{BUGFIX}{ Corrected sign of effect size for fisher_score for perfect overlap between set and query.}
